<resources>
    <string name="app_name">SafeBuy</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="title_activity_customer_main">customer_main</string>
    <string name="visited">Visited</string>
    <string name="near_you">Near You</string>
    <string name="tab_text_1">tab1</string>
    <string name="tab_text_2">tab2</string>
    <string name="validate">Validate</string>
    <string name="received_list">Received List</string>

    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email address</string>

    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_profile">Customer Profile</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="add_item">Add Item</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>

</resources>
